--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "date-fns": "^2.29.2",
     "dotenv": "^16.0.1",
+    "emoji-picker-react": "^3.6.1",
     "formik": "^2.2.9",
     "imagekitio-react": "^1.1.1",
     "react": "^18.1.0",
@@ -19,6 +21,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.52.2",
+    "socket.io-client": "^4.5.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
